<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">TakeToys</string>
    <string name="config_url">gs://taketoys-4d8d8.appspot.com/config.json</string>
    <string name="facebook_app_id">941539362861361</string>
    <string name="fb_login_protocol_scheme">fb941539362861361</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Статьи</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="menu_home">5 indicators of enduring family harmony - Fidelity</string>
    <string name="menu_gallery">Family Harmony</string>
    <string name="menu_slideshow">How to Live in Harmony with Others</string>
    <string name="menu_tools">Tips for avoid misunderstandings of husband and wife and live in harmony.</string>
    <string name="menu_share">How To Create a Harmonious Family</string>
</resources>