<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
      tools:showIn="navigation_view">

    <group android:checkableBehavior="single" android:title="">
        <item
                android:id="@+id/nav_home"
                android:title="@string/menu_home"/>
    </group>

    <group android:checkableBehavior="single" android:title="">
        <item
                android:id="@+id/nav_gallery"
                android:title="@string/menu_gallery"/>
    </group>

    <group android:checkableBehavior="single">
        <item
                android:id="@+id/nav_slideshow"
                android:title="@string/menu_slideshow"/>
    </group>

    <group android:checkableBehavior="single">
        <item
                android:id="@+id/nav_tools"
                android:title="@string/menu_tools"/>
    </group>

    <group android:checkableBehavior="single">
        <item
                android:id="@+id/nav_share"
                android:title="@string/menu_share"/>
    </group>

</menu>
